[project]
name = "docrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.14.2",
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.5",
    "openai>=2.41.1",
    "pydantic>=2.13.4",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "schema>=0.7.8",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "torchvision>=0.27.0",
    "wikipedia>=1.4.0",
]
